adicionando tela de contato

--- a/index.html
+++ b/index.html
@@ -75,8 +75,25 @@
 
 
     <section class="section-viewport a-container">
-
-
+        <div class="text-a-container">
+            <div class="text">
+                <h1>ALGUMA DÚVIDA?</h1>
+                <h3>Preencha o formulário e agende uma consulta!</h3>
+            </div>  
+           <div><hr></div>  
+            <div class="form-container">
+                <div class="form">
+                    <label for="">Coloque aqui seu nome</label>
+                    <input type="text" placeholder="Coloque aqui seu nome" value="">
+                    <label for="">Coloque aqui seu email</label>
+                    <input type="email" placeholder="Coloque aqui seu email" value="">
+                    <label for="">Coloque aqui seu telefone</label>
+                    <input type="tel" placeholder="Coloque aqui seu telefone" value="">
+                </div>
+                
+            </div>
+        </div>
+        
 
     </section>
 
